--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -9,18 +9,24 @@
     "watch": "tsc -w",
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
-    "start": "func start"
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "": "file:",
     "@azure/functions": "^4.7.3",
     "@types/mongoose": "^5.11.96",
+    "courses_api": "file:../back-end",
     "func": "^1.3.5",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "@types/node": "20.x",
     "azure-functions-core-tools": "^4.x",
     "rimraf": "^5.0.0",
     "typescript": "^4.9.5"
+  },
+  "compilerOptions": {
+    "skipLibCheck": true
   }
 }
