--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@azure/functions": "^4.7.3",
     "@types/mongoose": "^5.11.96",
+    "bcrypt": "^6.0.0",
     "courses_api": "file:../back-end",
+    "date-fns": "^4.1.0",
     "func": "^1.3.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
