--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@azure/functions": "^4.7.3",
     "@types/mongoose": "^5.11.96",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "courses_api": "file:../back-end",
     "date-fns": "^4.1.0",
     "func": "^1.3.5",
